--- a/docs/de-de/modules/crm/pages/e-mails-versenden.adoc
+++ b/docs/de-de/modules/crm/pages/e-mails-versenden.adoc
@@ -1489,6 +1489,11 @@ Dies ist keine globale Template-Variable, sondern eine Variable, die pro Auftrag
 |ID der Artikelverfügbarkeit des Nettowarenbestands. +
 Dies ist keine globale Template-Variable, sondern eine Variable, die pro Auftragsposition gesetzt wird. Sie kann nur im Tab *Artikelliste* der E-Mail-Vorlage genutzt werden.
 
+| `$CombinedAvailabilityID`
+|Höchste ID der Artikelverfügbarkeit des Nettowarenbestands. Hier wird die Artikelverfügbarkeit aller Artikel innerhalb des Auftrags berücksichtigt und die höchste ID wird ausgegeben. +
+*_Beispiel_*: Artikel A hat die Verfügbarkeits-ID 4, Artikel B hat die Verfügbarkeits-ID 7. +
+*_Ergebnis_*: Die Variable gibt den Wert 7 aus.
+
 | `$ItemAvailabilityPhysicalStockLabel`
 |Text der Artikelverfügbarkeit des physischen Warenbestands. +
 Dies ist keine globale Template-Variable, sondern eine Variable, die pro Auftragsposition gesetzt wird. Sie kann nur im Tab *Artikelliste* der E-Mail-Vorlage genutzt werden.
