--- a/docs/en-gb/modules/crm/pages/sending-emails.adoc
+++ b/docs/en-gb/modules/crm/pages/sending-emails.adoc
@@ -1490,6 +1490,11 @@ This is not a global template variable, but a variable that is set per order ite
 |ID of the item availability of the net stock. +
 This is not a global template variable, but a variable that is set per order item. It can only be used in the *Item list* tab of the email template.
 
+| `$CombinedAvailabilityID`
+|Highest ID of the item availability of the net stock. The availability of all items within the order is taken into consideration and the highest ID is returned. +
+*_Example_*: Item A has the availability ID 4, item B has the availability ID 7. +
+*_Result_*: The variable returns the value 7.
+
 | `$ItemAvailabilityPhysicalStockLabel`
 |Text of the item availability of the physical stock. +
 This is not a global template variable, but a variable that is set per order item. It can only be used in the *Item list* tab of the email template.
