--- a/docs/de-de/modules/daten/pages/ElasticSync.adoc
+++ b/docs/de-de/modules/daten/pages/ElasticSync.adoc
@@ -18,11 +18,11 @@ Import erstellen:
 
 . Öffne das Menü *Daten » Import*. +
 → Die Import-Übersicht wird geöffnet.
-. Klicke auf *Import hinzufügen* (icon:add[set=material, role="darkGrey"]). +
+. Klicke auf *Import hinzufügen* (icon:add[set=material]). +
 → Der Bearbeitungsbereich *Neuer Import* wird angezeigt.
 . Nimm die Einstellungen vor. Beachte dazu die Erläuterungen in <<tabelle-sync-erstellen>>. +
 *_Wichtig:_* Stelle das Importintervall erst ganz am Ende ein. Sonst wird möglicherweise schon der erste Import ausgeführt, während du noch Abgleich- oder Zuordnungseinstellungen vornimmst.
-. Speichere (icon:save[set=material, role="darkGrey"]) die Einstellungen. +
+. Speichere (icon:save[set=material]) die Einstellungen. +
 → Der Import wird erstellt. +
 → Die Abgleicheinstellungen des Imports werden geöffnet.
 
@@ -202,7 +202,7 @@ Abgleichfelder festlegen:
 . Wechsele in die Ansicht *Abgleich*.
 . Nimm die Einstellungen vor. +
 *_Tipp:_* Jeder xref::page$import-typen.adoc#[Import-Typ hat andere Abgleichfelder].
-. Speichere (icon:save[set=material, role="darkGrey"]) die Einstellungen.
+. Speichere (icon:save[set=material]) die Einstellungen.
 
 // TODO: Beispiel einfügen
 
@@ -253,7 +253,7 @@ Zuordnung erstellen:
 . Öffne das Menü *Daten » Import » [Import öffnen]*. +
 → Die Ansicht *Einstellungen* wird geöffnet.
 . Wechsele in die Ansicht *Zuordnung*.
-. Klicke auf *Zuordnung hinzufügen* (icon:add[set=material, role="darkGrey"]). +
+. Klicke auf *Zuordnung hinzufügen* (icon:add[set=material]). +
 → Das Fenster *Neue Zuordnung* wird geöffnet.
 . Gib einen Namen für die Zuordnung ein.
 . Speichere die Einstellung. +
@@ -270,7 +270,7 @@ Du kannst den Namen und die Position von Zuordnungen jederzeit ändern:
 . Klicke in der Symbolleiste der Zuordnung auf *Einstellungen* (icon:cog[role="dark grey"]). +
 → Rechts neben der Symbolleiste werden die Felder *Name* und *Position* eingeblendet.
 . Passe Namen und/oder Position an.
-. Speichere (icon:save[set=material, role="darkGrey"]) die Einstellungen.
+. Speichere (icon:save[set=material]) die Einstellungen.
 --
 
 [#do-mappings]
@@ -289,7 +289,7 @@ Datenfelder zuordnen:
 
 . Öffne das Menü *Daten » Import » [Import öffnen] » [Zuordnung öffnen]*.
 . Wähle für jede Spalte, die importiert werden soll, ein plentymarkets Datenfeld.
-. Speichere (icon:save[set=material, role="darkGrey"]) die Zuordnungen.
+. Speichere (icon:save[set=material]) die Zuordnungen.
 
 [#own-value]
 === Benutzerdefinierte Zuordnung: Eigener Wert
@@ -311,12 +311,12 @@ video::328394037[vimeo]
 Eigenen Wert zuordnen:
 
 . Navigiere in der Ansicht ganz nach unten.
-. Klicke auf *icon:plus[set=material, role="darkGrey") FELD*. +
+. Klicke auf *icon:plus[set=material] FELD*. +
 → Eine neue Zeile wird eingefügt. +
 → Die Quelle *Eigener Wert* ist standardmäßig gewählt.
 . Gib in das Feld *Wert* die Informationen ein, die für alle Datensätze des Imports in das plentymarkets Datenfeld geschrieben werden sollen.
 . Wähle das plentymarkets Datenfeld, in das der Wert importiert werden soll.
-. Speichere (icon:save[set=material, role="darkGrey"]) die Zuordnung.
+. Speichere (icon:save[set=material]) die Zuordnung.
 
 [#1520]
 === Benutzerdefinierte Zuordnung: Reguläre Ausdrücke
@@ -348,7 +348,7 @@ video::329090839[vimeo]
 Werte über RegEx-Funktion ersetzen:
 
 . Öffne das Menü *Daten » Import » [Import öffnen] » [Zuordnung öffnen]*.
-. Klicke auf *icon:plus[set=material, role="darkGrey"] FELD*. +
+. Klicke auf *icon:plus[set=material] FELD*. +
 → Eine neue Zeile wird eingefügt.
 . Wähle im Feld *Quelle* die Option *Regulärer Ausdruck*. +
 → Die Optionen für *Regulärer Ausdruck* werden angezeigt.
@@ -356,7 +356,7 @@ Werte über RegEx-Funktion ersetzen:
 . Gib im Feld *Suchen* ein Search pattern ein.
 . Gib im Feld *Ersetzen* ein Replace pattern ein.
 . Wähle in der Dropdown-Liste *Ziel* das plentymarkets Datenfeld, das befüllt werden soll.
-. Speichere (icon:save[set=material, role="darkGrey"]) die Einstellungen. +
+. Speichere (icon:save[set=material]) die Einstellungen. +
 → Die Datenfelder werden beim Import aktualisiert.
 
 [.collapseBox]
@@ -401,7 +401,7 @@ Die folgenden Rechenarten sind verfügbar:
 Werte durch mathematische Berechnungen ändern:
 
 . Öffne das Menü *Daten » Import » [Import öffnen] » [Zuordnung öffnen]*.
-. Klicke auf *icon:plus[set=material, role="darkGrey"] FELD*. +
+. Klicke auf icon:plus[set=material] *FELD*. +
 → Eine neue Zeile wird eingefügt.
 . Wähle im Feld *Quelle* die Option *Mathematische Berechnungen*. +
 → Die Optionen für *Mathematische Berechnungen* werden angezeigt.
@@ -409,7 +409,7 @@ Werte durch mathematische Berechnungen ändern:
 . Wähle aus der Dropdown-Liste *Operator* die Rechenart.
 . Gib in das Feld *Wert* einen Zahlenwert ein.
 . Wähle in der Dropdown-Liste *Ziel* das plentymarkets Datenfeld, das befüllt werden soll.
-. Speichere (icon:save[set=material, role="darkGrey"]) die Einstellungen. +
+. Speichere (icon:save[set=material]) die Einstellungen. +
 → Die Zahlenwerte der Spalte werden beim Import neu berechnet. +
 *_Wichtig:_* Die Zahlen in der Importdatei bleiben gleich.
 
@@ -448,7 +448,7 @@ Eigene Zuordnung festlegen:
 . Öffne das Menü *Daten » Import » [Import öffnen] » [Zuordnung öffnen]*.
 . Wähle im Dropdown-Menü des Felds *Quelle* die Option *Eigene Zuordnung*.
 . Fülle die Felder aus. Beachte dazu die Erläuterungen in <<tabelle-eigene-zuordnung>>.
-. Speichere (icon:save[set=material, role="darkGrey"]) die Einstellungen.
+. Speichere (icon:save[set=material]) die Einstellungen.
 
 [[tabelle-eigene-zuordnung]]
 .Eigene Zuordnung
@@ -575,7 +575,7 @@ Filter hinzufügen:
 
 . Öffne das Menü *Daten » Import » [Import öffnen] » [Zuordnung öffnen]*.
 . Klicke in der Symbolleiste auf *Filter* (icon:filter[role="yellow"]).
-. Klicke auf *icon:plus[set=material, role="darkgrey"] *Filter*. +
+. Klicke auf *icon:plus[set=material] *Filter*. +
 → Eine neue Zeile wird eingeblendet.
 . Wähle die *Quelle* aus deiner Datei, die du filtern möchtest.
 . Wähle, welche *Regel* angewendet werden soll.
@@ -583,7 +583,7 @@ Filter hinzufügen:
 . Wähle einen Operator. Dieser Operator entscheidet darüber, wie mehrere Filter kombiniert werden. +
 *_Wichtig:_* Wenn du den Operator *Und* wählst, werden nur Datensätze importiert, auf die *_alle_* Filter zutreffen.
 . Füge bei Bedarf weitere Filter hinzu.
-. Speichere (icon:save[set=material, role="green"]) die Einstellungen. +
+. Speichere (icon:save[set=material) die Einstellungen. +
 → Die Filter werden gespeichert.
 → Nur die Daten werden importiert, auf die diese Filterregeln zutreffen.
 
@@ -612,7 +612,7 @@ Importe vor dem Ausführen auf Fehler prüfen:
 . Klicke in der Symbolleiste auf *Validierung* (icon:bug[role="yellow"]). +
 → In einem neuen Fenster wird eine Liste der Fehlermeldungen angezeigt.
 . Wenn Fehler aufgetreten sind und du Hilfe aus dem Forum brauchst:
-  * Klicke auf *Protokoll in Zwischenablage kopieren* (icon:content_copy[set=material, role="darkgray"]).
+  * Klicke auf *Protokoll in Zwischenablage kopieren* (icon:content_copy[set=material]).
   * Füge die Informationen im Forum ein.
 
 [#1615]
