--- a/docs/de-de/modules/daten/pages/ElasticSync.adoc
+++ b/docs/de-de/modules/daten/pages/ElasticSync.adoc
@@ -311,7 +311,7 @@ video::328394037[vimeo]
 Eigenen Wert zuordnen:
 
 . Navigiere in der Ansicht ganz nach unten.
-. Klicke auf *icon:plus[set=material] FELD*. +
+. Klicke auf icon:add[set=material] *FELD*. +
 → Eine neue Zeile wird eingefügt. +
 → Die Quelle *Eigener Wert* ist standardmäßig gewählt.
 . Gib in das Feld *Wert* die Informationen ein, die für alle Datensätze des Imports in das plentymarkets Datenfeld geschrieben werden sollen.
@@ -348,7 +348,7 @@ video::329090839[vimeo]
 Werte über RegEx-Funktion ersetzen:
 
 . Öffne das Menü *Daten » Import » [Import öffnen] » [Zuordnung öffnen]*.
-. Klicke auf *icon:plus[set=material] FELD*. +
+. Klicke auf icon:add[set=material] *FELD*. +
 → Eine neue Zeile wird eingefügt.
 . Wähle im Feld *Quelle* die Option *Regulärer Ausdruck*. +
 → Die Optionen für *Regulärer Ausdruck* werden angezeigt.
@@ -401,7 +401,7 @@ Die folgenden Rechenarten sind verfügbar:
 Werte durch mathematische Berechnungen ändern:
 
 . Öffne das Menü *Daten » Import » [Import öffnen] » [Zuordnung öffnen]*.
-. Klicke auf icon:plus[set=material] *FELD*. +
+. Klicke auf icon:add[set=material] *FELD*. +
 → Eine neue Zeile wird eingefügt.
 . Wähle im Feld *Quelle* die Option *Mathematische Berechnungen*. +
 → Die Optionen für *Mathematische Berechnungen* werden angezeigt.
@@ -575,7 +575,7 @@ Filter hinzufügen:
 
 . Öffne das Menü *Daten » Import » [Import öffnen] » [Zuordnung öffnen]*.
 . Klicke in der Symbolleiste auf *Filter* (icon:filter[role="yellow"]).
-. Klicke auf *icon:plus[set=material] *Filter*. +
+. Klicke auf icon:add[set=material] *Filter*. +
 → Eine neue Zeile wird eingeblendet.
 . Wähle die *Quelle* aus deiner Datei, die du filtern möchtest.
 . Wähle, welche *Regel* angewendet werden soll.
@@ -584,7 +584,7 @@ Filter hinzufügen:
 *_Wichtig:_* Wenn du den Operator *Und* wählst, werden nur Datensätze importiert, auf die *_alle_* Filter zutreffen.
 . Füge bei Bedarf weitere Filter hinzu.
 . Speichere (icon:save[set=material) die Einstellungen. +
-→ Die Filter werden gespeichert.
+→ Die Filter werden gespeichert. +
 → Nur die Daten werden importiert, auf die diese Filterregeln zutreffen.
 
 [#import-preview]
