--- a/docs/de-de/modules/ROOT/nav.adoc
+++ b/docs/de-de/modules/ROOT/nav.adoc
@@ -270,7 +270,7 @@
 ** xref:daten:backup.adoc[Datenbank-Backup]
 ** xref:daten:aenderungshistorie.adoc[Änderungen nachvollziehen]
 ** xref:daten:rest-api.adoc[REST-API-Schnittstellen einrichten]
-** xref:daten:ftpz-zugang[FTP-Zugang (nur für ältere Systeme)]
+** xref:daten:ftpz-zugang.adoc[FTP-Zugang (nur für ältere Systeme)]
 ** xref:daten:interne-IDs.adoc[Interne IDs in plentymarkets]
 ** xref:daten:alte-tools.adoc[Veraltete Tools]
 *** xref:daten:export-import.adoc[Dynamischer Datenaustausch (alte Funktion)]
