Fixed a few minor things, such as duplicate table names and incorrectly formatted q and a section

--- a/docs/de-de/modules/webshop/pages/ceres-einrichten.adoc
+++ b/docs/de-de/modules/webshop/pages/ceres-einrichten.adoc
@@ -10,12 +10,6 @@ link:https://marketplace.plentymarkets.com/plugins/templates/Ceres_4697[plentySh
 
 Das Plugin *plentyShop LTS* beinhaltet das Standard-Design des Shops und kann nach deinen Wünschen angepasst werden. Das Plugin link:https://marketplace.plentymarkets.com/plugins/templates/IO_4696[IO^] beinhaltet die Logik, stellt die allgemeine Grundlage für alle Design-Plugins dar und kann auch von anderen Plugins verwendet werden.
 
-[INFO]
-.plentyShop mit Assistenten einrichten
-====
-Unsere Assistenten helfen dir bei der Einrichtung deines plentyShops. Durchlaufe den Integrationen-Assistenten unter *Einrichtung » Assistenten » Grundeinrichtung » Integrationen*, um plentyShop LTS zu installieren. Durchlaufe danach den Assistenten unter *Einrichtung » Plugins » (Plugin-Set wählen) » plentyShop LTS* um deinen plentyShop nach deinen Vorstellungen aufzusetzen. 
-====
-
 [#15]
 == Vorbereitungen
 
@@ -1024,7 +1018,6 @@ Eine ausführliche Anleitung zur Einrichtung von Bestellmerkmalen findest du auc
 
 Im Menü *Einrichtung » Mandant » Mandant wählen » E-Mail » Automatischer Versand* stehen dir verschiedene Ereignisse zur Verfügung, die mit einer E-Mail-Vorlage verknüpft werden können. Wähle aus der Dropdown-Liste die E-Mail-Vorlage, die du zuvor im Menü *Einrichtung » Mandant » Mandant wählen » E-Mail » Vorlagen* xref:crm:e-mails-versenden.adoc#1200[erstellt] hast. Dadurch wird bei Eintritt des Ereignisses die E-Mail-Vorlage automatisch an die Kund*in versendet.
 
-
 [.instruction]
 Automatischen E-Mail-Versand einrichten:
 
@@ -1078,9 +1071,9 @@ Domain für iFrame freigeben:
 
 [%interactive]
 * [ ] Hast du die nötigen Plugins gekauft, installiert, mit Positionsnummern versehen und in einem Plugin-Set bereitgestellt?
+* [ ] Hast du deine Rechtstexte hinterlegt?
 * [ ] Hast du ein Standardlieferland, eine Standardversandart, ein Standardversandprofil eingestellt?
 * [ ] Hast du ein Plugin für eine Zahlungsart im Plugin-Set installiert, bereitgestellt und als Standardzahlungsart hinterlegt?
-* [ ] Hast du deine Rechtstexte hinterlegt?
 * [ ] Sind die Inhalte deiner Content-Kategorien (bspw. für die Anzeige von Versandkosteninformationen) im Tab *Template* der Kategorie hinterlegt?
 * [ ] Hast du die plentyShop-Standardstartseite deaktiviert und die ShopBuilder Startseite aktiviert?
 * [ ] Hast du die Einstellungen für die alle Tabs der plentyShop Konfiguration durchgeführt?
@@ -1357,19 +1350,30 @@ Neben Theme-Plugins, die das Design deines plentyShop verändern, stehen dir auf
 Auf unseren Handbuchseiten zu Plugins erfährst du, wie du weitere Plugins xref:plugins:new-plugins.adoc#[hinzufügen] und xref:plugins:plugin-sets.adoc#[verwalten] kannst.
 
 [#plentyshop-faq]
-
 == Häufig gestellte Fragen
 
 In diesem Abschnitt beantworten wir Fragen, die häufig im Zusammenhang mit plentyShop LTS auftreten.
 
-[qanda]
-Warum wird meine Kategorie nicht im Shop angezeigt?::
-    Gehe xref:artikel:checkliste-kategorien-anzeige.adoc#[diese Checkliste] Schritt für Schritt durch. Sollte deine Kategorie trotzdem nicht angezeigt werden, kontaktiere uns im link:https://forum.plentymarkets.com/c/plentyshop[Forum^].
+[.collapseBox]
+.*Warum wird meine Kategorie nicht im Shop angezeigt?*
+--
 
-[qanda]
-Warum wird mein Artikel nicht im Shop angezeigt?::
-    Gehe xref:artikel:checkliste-artikel-anzeige.adoc#[diese Checkliste] Schritt für Schritt durch. Sollte dein Artikel trotzdem nicht angezeigt werden, kontaktiere uns im link:https://forum.plentymarkets.com/c/plentyshop[Forum^].
+Gehe xref:artikel:checkliste-kategorien-anzeige.adoc#[diese Checkliste] Schritt für Schritt durch. Sollte deine Kategorie trotzdem nicht angezeigt werden, kontaktiere uns im link:https://forum.plentymarkets.com/c/plentyshop[Forum^].
 
-[qanda]
-Wie bediene ich den ShopBuilder und was kann ich damit machen?::
-    In unserem link:https://www.youtube.com/watch?v=s_9DCTlF_qg[Livestream^] am 17.04.2020 haben wir euch das Arbeiten mit dem ShopBuilder vom ersten Schritt bis zum fertigen, voll funktionstüchtigen plentyShop vorgestellt. Zudem zeigt der Live-Mitschnitt viele neue Funktionen von Ceres 5, wie beispielsweise Artikelsets und neue Widgets für die Suche. Wenn du nicht weißt, wo du anfangen sollst, dann ist dieser Live-Mitschnitt das Richtige für dich!
+--
+
+[.collapseBox]
+.*Warum wird mein Artikel nicht im Shop angezeigt?*
+--
+
+Gehe xref:artikel:checkliste-artikel-anzeige.adoc#[diese Checkliste] Schritt für Schritt durch. Sollte dein Artikel trotzdem nicht angezeigt werden, kontaktiere uns im link:https://forum.plentymarkets.com/c/plentyshop[Forum^].
+
+--
+
+[.collapseBox]
+.*Wie bediene ich den ShopBuilder und was kann ich damit machen?*
+--
+
+In unserem link:https://www.youtube.com/watch?v=s_9DCTlF_qg[Livestream^] am 17.04.2020 haben wir euch das Arbeiten mit dem ShopBuilder vom ersten Schritt bis zum fertigen, voll funktionstüchtigen plentyShop vorgestellt. Zudem zeigt der Live-Mitschnitt viele neue Funktionen von Ceres 5, wie beispielsweise Artikelsets und neue Widgets für die Suche. Wenn du nicht weißt, wo du anfangen sollst, dann ist dieser Live-Mitschnitt das Richtige für dich!
+
+--
