--- a/docs/de-de/modules/ROOT/nav.adoc
+++ b/docs/de-de/modules/ROOT/nav.adoc
@@ -265,12 +265,15 @@
 ***** xref:daten:zahlungen-exportieren.adoc[Zahlungen]
 **** xref:daten:catalogues-manage.adoc[Kataloge verwalten]
 **** xref:daten:catalogues-status.adoc[Exportstatus prüfen]
-** xref:daten:datenlog.adoc[Daten-Log]
-** xref:daten:datenbereinigung.adoc[Datenbereinigung]
-** xref:daten:backup.adoc[Datenbank-Backup]
-** xref:daten:aenderungshistorie.adoc[Änderungen nachvollziehen]
-** xref:daten:rest-api.adoc[REST-API-Schnittstellen einrichten]
-** xref:daten:ftpz-zugang.adoc[FTP-Zugang (nur für ältere Systeme)]
+** xref:daten:data-delete-restore.adoc[Daten bereinigen und wiederherstellen]
+*** xref:daten:datenbereinigung.adoc[Datenbereinigung]
+*** xref:daten:backup.adoc[Datenbank-Backup]
+** xref:daten:data-monitoring.adoc[Änderungen und Ereignisse nachvollziehen]
+*** xref:daten:aenderungshistorie.adoc[Änderungshistorie]
+*** xref:daten:datenlog.adoc[Daten-Log]
+** xref:daten:data-interfaces.adoc[Schnittstellen]
+*** xref:daten:rest-api.adoc[REST-API-Schnittstellen einrichten]
+*** xref:daten:ftpz-zugang.adoc[FTP-Zugang (nur für ältere Systeme)]
 ** xref:daten:interne-IDs.adoc[Interne IDs in plentymarkets]
 ** xref:daten:alte-tools.adoc[Veraltete Tools]
 *** xref:daten:export-import.adoc[Dynamischer Datenaustausch (alte Funktion)]
