ADD currency boliviano

--- a/docs/de-de/modules/daten/pages/interne-IDs.adoc
+++ b/docs/de-de/modules/daten/pages/interne-IDs.adoc
@@ -2149,6 +2149,9 @@ plentymarkets unterstützt die in <<tabelle-interneIDs-waehrungen>> aufgeführte
 | *BHD*
 |Bahrain-Dinar
 
+| *BOB*
+|Bolivien, Bolivianischer Boliviano
+
 | *BRL*
 |Brasilien, Brasilianischer Real, Mehrzahl: Reais
 
