--- a/docs/de-de/modules/payment/pages/waehrungen.adoc
+++ b/docs/de-de/modules/payment/pages/waehrungen.adoc
@@ -32,6 +32,9 @@ Aktuell werden in deinem plentymarkets System die in <<tabelle-verfuegbare-waehr
 | *BHD*
 |Bahrain-Dinar
 
+| *BOB*
+|Bolivien, Bolivianischer Boliviano
+
 | *BRL*
 |Brasilien, Brasilianischer Real, Mehrzahl: Reais
 
