--- a/docs/en-gb/modules/data/pages/internal-IDs.adoc
+++ b/docs/en-gb/modules/data/pages/internal-IDs.adoc
@@ -2151,6 +2151,9 @@ include::fulfilment:partial$island-region-postcodes.adoc[]
 | *BHD*
 |Bahraini dinar
 
+| *BOB*
+|Bolivia, Bolivian boliviano
+
 | *BRL*
 |Brazil, Brazilian real, plural: Reais
 
