--- a/docs/en-gb/modules/payment/pages/currencies.adoc
+++ b/docs/en-gb/modules/payment/pages/currencies.adoc
@@ -32,6 +32,9 @@ Your plentymarkets system currently supports the currencies listed in <<table-su
 | *BHD*
 |Bahraini dinar
 
+| *BOB*
+|Bolivia, Bolivian boliviano
+
 | *BRL*
 |Brazil, Brazilian real, plural: Reais
 
