--- a/docs/de-de/modules/ROOT/nav.adoc
+++ b/docs/de-de/modules/ROOT/nav.adoc
@@ -265,7 +265,7 @@
 ***** xref:daten:zahlungen-exportieren.adoc[Zahlungen]
 **** xref:daten:catalogues-manage.adoc[Kataloge verwalten]
 **** xref:daten:catalogues-status.adoc[Exportstatus prüfen]
-** xref:daten:data-delete-restore.adoc[Daten bereinigen und wiederherstellen]
+** xref:daten:data-delete-restore.adoc[Daten bereinigen oder wiederherstellen]
 *** xref:daten:datenbereinigung.adoc[Datenbereinigung]
 *** xref:daten:backup.adoc[Datenbank-Backup]
 ** xref:daten:data-monitoring.adoc[Änderungen und Ereignisse nachvollziehen]
