ADD english translation

--- a/docs/de-de/modules/artikel/pages/einheiten.adoc
+++ b/docs/de-de/modules/artikel/pages/einheiten.adoc
@@ -4,7 +4,6 @@
 :id: IHTSF1W
 :author: team-item
 
-//ToDo - English translation
 //ToDo - GIFs in German and English, also for the Tags page too
 
 ////
@@ -170,10 +169,7 @@ Siehe die Tabelle unten.
 Dieses Suchfeld ist also nützlich, wenn du eine ganz bestimmte Einheit finden willst.
 
 | *Maßeinheit (ISO)*
-|Wähle einen oder mehrere ISO-Codes.
-
-*_Hinweis_*: Dies ist eine "Oder"-Suche.
-Wählst du also die ISO-Codes "X" und "Y", liefert die Suche Einheiten, die entweder den ISO-Code X _oder_ Y haben.
+|Wähle einen ISO-Code aus der Dropdown-Liste aus.
 
 | *Position*
 |Gib die Positionsnummer einer Einheit ein.
@@ -314,7 +310,7 @@ Der Grundpreis gibt die Kosten pro Kilogramm, Liter oder andere Maßeinheit an.
 Er errechnet sich aus Einheit, Inhalt und Preis der Variante.
 
 *_Hintergrund-Info_*:
-Zum 28.05.2022 tritt eine neue link:https://www.bmwk.de/Redaktion/DE/Downloads/P-R/novelle-der-preisangabenverordnung-pangv.pdf?__blob=publicationFile&v=4[Preisangabenverordnung^] in Kraft.
+Am 28.05.2022 ist eine neue link:https://www.bmwk.de/Redaktion/DE/Downloads/P-R/novelle-der-preisangabenverordnung-pangv.pdf?__blob=publicationFile&v=4[Preisangabenverordnung^] in Kraft getreten.
 In der Verordnung wird in § 4 vorgeschrieben, dass Händler, die Produkte nach Gewicht, Volumen, Länge oder Fläche verkaufen, den Grundpreis angeben müssen.
 Die Mengeneinheit für den Grundpreis ist jeweils 1 Kilogramm, 1 Liter, 1 Kubikmeter, 1 Meter oder 1 Quadratmeter der Ware.
 
