--- a/docs/de-de/modules/artikel/pages/verzeichnis.adoc
+++ b/docs/de-de/modules/artikel/pages/verzeichnis.adoc
@@ -1868,7 +1868,7 @@ In der Verordnung wird in § 11 (1) festgelegt, wie die Preise angegeben werden 
 [discrete]
 ==== Hintergrund-Info
 
-Zum 28.05.2022 tritt eine neue link:https://www.bmwk.de/Redaktion/DE/Downloads/P-R/novelle-der-preisangabenverordnung-pangv.pdf?__blob=publicationFile&v=4[Preisangabenverordnung^] in Kraft.
+Am 28.05.2022 ist eine neue link:https://www.bmwk.de/Redaktion/DE/Downloads/P-R/novelle-der-preisangabenverordnung-pangv.pdf?__blob=publicationFile&v=4[Preisangabenverordnung^] in Kraft getreten.
 In der Verordnung wird in § 11 (1) festgelegt, wie die Preise angegeben werden müssen, wenn Waren ermäßigt werden:
 
 ----
