--- a/docs/de-de/modules/warenwirtschaft/pages/variations-track-stock.adoc
+++ b/docs/de-de/modules/warenwirtschaft/pages/variations-track-stock.adoc
@@ -174,8 +174,7 @@ Ein Standardwert aus der Praxis für die Lagerreichweite ist z.B. 14 Tage.
 Wenn der Artikel den Meldebestand erreicht hat, werden die 14 Tage zur Berechnung der Nachbestellmenge berücksichtigt, d.h. es wird die Menge zur Nachbestellung vorgeschlagen, die für die folgenden 14 Tage ausreicht.
 
 | Maximalbestand
-|Gib den maximalen Bestand für das Lager ein.
-Der Maximalbestand wird für den Bestellmengenvorschlag berücksichtigt, sodass der Vorschlag den Maximalbestand nicht überschreitet.
+|Derzeit ohne Funktion.
 
 //klären, ob diese Option eine Funktion hat - es klang als ob wir uns nicht sicher sind, ob Amazon den Wert hier berücksichtigt
 | Bestandspuffer
