--- a/docs/en-gb/modules/stock-management/pages/variations-track-stock.adoc
+++ b/docs/en-gb/modules/stock-management/pages/variations-track-stock.adoc
@@ -173,8 +173,7 @@ A standard value that could be used for the stock turnover is 14 days.
 Once the item has reached the reorder level, the 14 days will be used to calculate how many copies of the item need to be reordered. In other words, the suggested reorder quantity would be sufficient for the following 14 days.
 
 | Maximum stock
-|Enter the maximum stock level for the warehouse.
-plentymarkets takes the maximum stock level into consideration when suggesting how many copies of an item should be reordered. The suggested reorder quantity will not exceed the maximum stock level entered here.
+|Currently not in use.
 
 //klären, ob diese Option eine Funktion hat - es klang als ob wir uns nicht sicher sind, ob Amazon den Wert hier berücksichtigt
 | Stock buffer
