Added info about deprecated Etsy assistant

--- a/docs/de-de/modules/maerkte/pages/etsy.adoc
+++ b/docs/de-de/modules/maerkte/pages/etsy.adoc
@@ -60,6 +60,13 @@ include::partial$plugin-installation.adoc[]
 [#etsy-backend-settings]
 == Einstellungen bei Etsy vornehmen
 
+[IMPORTANT]
+.Etsy-Assistent wird zur Einrichtung von Etsy nicht benötigt
+====
+Du musst den Assistenten *Etsy 2.0 Migration* nicht durchlaufen, wenn du Etsy in plentymarkets einrichten willst. +
+Der Assistent wurde für die Umstellung auf Etsy 2.0 im September 2019 benötigt und diente dazu, SKUs zu migrieren. Da Etsy aber jetzt die neue Logik verwendet, brauchst du den Assistenten nicht, wenn du den Marktplatz in deinem plentymarkets System einrichten willst.
+====
+
 Nimm die folgenden Einstellungen in deinem Konto bei Etsy vor, bevor du den Marktplatz in plentymarkets einrichtest:
 
 * Stelle bei Etsy im Menü *Shop-Manager » Artikel » [Artikel öffnen]* die Einstellung *Erneuerungsoptionen* auf *Manuell*. Das Etsy-Plugin funktioniert sonst nicht korrekt.
