Kathrin/daten kapitel (#573)
* Update nav.adoc

* new nav - de

* push

* update data chapters - EN

--- a/docs/en-gb/modules/ROOT/nav.adoc
+++ b/docs/en-gb/modules/ROOT/nav.adoc
@@ -257,13 +257,16 @@
 ***** xref:data:exporting-stock-movements.adoc[Stock movements]
 ***** xref:data:exporting-payments.adoc[Payments]
 **** xref:data:catalogues-manage.adoc[Managing catalogues]
-**** xref:data:catalogues-status.adoc[Checking export status]
-** xref:data:datalog.adoc[Data log]
-** xref:data:data-cleansing.adoc[Data cleansing]
-** xref:data:backup.adoc[Database backup]
-** xref:data:change-history.adoc[Tracking changes]
-** xref:data:rest-api.adoc[Setting up REST API]
-** xref:data:ftp-access.adoc[FTP access (only for older systems)]
+**** xref:daten:catalogues-status.adoc[Checking export status]
+** xref:data:data-delete-restore.adoc[Cleansing or backing up data]
+*** xref:data:data-cleansing.adoc[Data cleansing]
+*** xref:data:backup.adoc[Database backup]
+** xref:data:data-monitoring.adoc[Monitoring changes and events]
+*** xref:data:change-history.adoc[Tracking changes]
+*** xref:data:datalog.adoc[Data log]
+** xref:data:data-interfaces.adoc[Interfaces]
+*** xref:data:rest-api.adoc[Setting up REST API]
+*** xref:data:ftp-access.adoc[FTP access (older systems only)]
 ** xref:data:internal-IDs.adoc[Internal IDs in plentymarkets]
 ** xref:data:deprecated-tools.adoc[Deprecated tools]
 *** xref:data:export-import.adoc[Dynamic data exchange (old function)]
