fix: add missing assistant plugins

--- a/docs/en-gb/modules/plugins/pages/adding-plugins-system.adoc
+++ b/docs/en-gb/modules/plugins/pages/adding-plugins-system.adoc
@@ -26,12 +26,16 @@ The following plugins are available via the assistant:
 * Payment methods
 ** PayPal
 ** Mollie
+** Klarna
+** PAYONE
 ** Cash in advance
 ** Cash on delivery
 ** Invoice
 ** EBICS
 * Shipping service providers
 ** DHL (DE)
+** DHL Preferred Delivery (DE)
+** DHL Retoure Online
 ** Hermes (DE)
 ** DPD (DE)
 ** DPD (UK)
