ADD relation to payment method to messenger

--- a/docs/en-gb/modules/crm/pages/messenger-testphase.adoc
+++ b/docs/en-gb/modules/crm/pages/messenger-testphase.adoc
@@ -252,8 +252,6 @@ Available values: *Done* and *Not done*.
 |[#intable-filter-contact-id]*Contact ID*
 |Enter an ID to only search for conversations that are linked with this contact ID.
 
-   
-
 |[#intable-filter-order-id]*Order ID*
 |Enter an ID to only search for conversations that are linked with this order ID.
 
@@ -262,6 +260,9 @@ Available values: *Done* and *Not done*.
 
 |[#intable-filter-tags]*Tags*
 |Select (icon:check_box[set=material, role=skyBlue]) tags to only search for conversations with these <<#tags-messenger, tags>>.
+
+|[#intable-filter-payment-id]*Payment ID*
+|Enter an ID to only search for conversations that are linked with this payment ID.
 
 |[#intable-filter-reset]*Reset*
 |Resets the selected filter criteria.
@@ -347,9 +348,11 @@ a|The conversation relations are shown here, for example:
 * icon:person[set=material] _Name of the contact (contact ID)_
 * icon:shopping_cart[set=material] _Order ID_
 * icon:mail[set=material] _Email address_
+* icon:credit_card[set=material] _Payment ID_
 * subscribers of the conversation.
 
-In the line of the conversation, click on icon:chevron_right[set=material] to see all available relations at a glance. Click on icon:expand_more[set=material] to close the relation area again. The contact and the order have a direct link to the contact data record respectively to the order.
+In the line of the conversation, click on icon:chevron_right[set=material] to see all available relations at a glance. Click on icon:expand_more[set=material] to close the relation area again. +
+*_Note:_* The xref:crm:contacts.adoc#[contact], the xref:orders:managing-orders.adoc#[order] and the xref:payment:beta-managing-payments-new.adoc#[payment] have a direct link to the data record in the *CRM » Contacts* menu respectively in the *Orders » Edit orders* menu respectively in the *Orders » Payments* menu.
 
 |[#intable-overview-subject]*Subject*
 |Shows the subject of the first message within the conversation.
@@ -723,9 +726,11 @@ a|The conversation relations are shown here, for example:
 * icon:person[set=material] _Name of the contact (contact ID)_
 * icon:shopping_cart[set=material] _Order ID_
 * icon:mail[set=material] _Email address_
+* icon:credit_card[set=material] _Payment ID_
 * subscribers of the conversation.
 
-In the line of the conversation, click on icon:chevron_right[set=material] to see all available relations at a glance. Click on icon:expand_more[set=material] to close the relation area again. The contact and the order have a direct link to the contact data record respectively to the order.
+In the line of the conversation, click on icon:chevron_right[set=material] to see all available relations at a glance. Click on icon:expand_more[set=material] to close the relation area again. +
+*_Note:_* The xref:crm:contacts.adoc#[contact], the xref:orders:managing-orders.adoc#[order] and the xref:payment:beta-managing-payments-new.adoc#[payment] have a direct link to the data record in the *CRM » Contacts* menu respectively in the *Orders » Edit orders* menu respectively in the *Orders » Payments* menu.
 
 |[#intable-new-messages-subject]*Subject*
 |Shows the subject of the first message within the conversation.
@@ -803,9 +808,11 @@ a|The conversation relations are shown here, for example:
 * icon:person[set=material] _Name of the contact (contact ID)_
 * icon:shopping_cart[set=material] _Order ID_
 * icon:mail[set=material] _Email address_
+* icon:credit_card[set=material] _Payment ID_
 * subscribers of the conversation.
 
-In the line of the conversation, click on icon:chevron_right[set=material] to see all available relations at a glance. Click on icon:expand_more[set=material] to close the relation area again. The contact and the order have a direct link to the contact data record respectively to the order.
+In the line of the conversation, click on icon:chevron_right[set=material] to see all available relations at a glance. Click on icon:expand_more[set=material] to close the relation area again. +
+*_Note:_* The xref:crm:contacts.adoc#[contact], the xref:orders:managing-orders.adoc#[order] and the xref:payment:beta-managing-payments-new.adoc#[payment] have a direct link to the data record in the *CRM » Contacts* menu respectively in the *Orders » Edit orders* menu respectively in the *Orders » Payments* menu.
 
 |[#intable-my-messages-subject]*Subject*
 |Shows the subject of the first message within the conversation.
@@ -884,9 +891,11 @@ a|The conversation relations are shown here, for example:
 * icon:person[set=material] _Name of the contact (contact ID)_
 * icon:shopping_cart[set=material] _Order ID_
 * icon:mail[set=material] _Email address_
+* icon:credit_card[set=material] _Payment ID_
 * subscribers of the conversation.
 
-In the line of the conversation, click on icon:chevron_right[set=material] to see all available relations at a glance. Click on icon:expand_more[set=material] to close the relation area again. The contact and the order have a direct link to the contact data record respectively to the order.
+In the line of the conversation, click on icon:chevron_right[set=material] to see all available relations at a glance. Click on icon:expand_more[set=material] to close the relation area again. +
+*_Note:_* The xref:crm:contacts.adoc#[contact], the xref:orders:managing-orders.adoc#[order] and the xref:payment:beta-managing-payments-new.adoc#[payment] have a direct link to the data record in the *CRM » Contacts* menu respectively in the *Orders » Edit orders* menu respectively in the *Orders » Payments* menu.
 
 |[#intable-trash-subject]*Subject*
 |Shows the subject of the first message within the conversation.
