--- a/docs/en-gb/modules/ROOT/nav.adoc
+++ b/docs/en-gb/modules/ROOT/nav.adoc
@@ -257,7 +257,7 @@
 ***** xref:data:exporting-stock-movements.adoc[Stock movements]
 ***** xref:data:exporting-payments.adoc[Payments]
 **** xref:data:catalogues-manage.adoc[Managing catalogues]
-**** xref:daten:catalogues-status.adoc[Checking export status]
+**** xref:data:catalogues-status.adoc[Checking export status]
 ** xref:data:data-delete-restore.adoc[Cleansing or backing up data]
 *** xref:data:data-cleansing.adoc[Data cleansing]
 *** xref:data:backup.adoc[Database backup]
