--- a/docs/en-gb/modules/crm/pages/emailbuilder.adoc
+++ b/docs/en-gb/modules/crm/pages/emailbuilder.adoc
@@ -1650,6 +1650,9 @@ In the contact data record, the timestamp in the format `00:00:00` is also saved
 [#variables-contact-delivery-address]
 ==== Variables: Contact / Delivery address
 
+[TIP]
+*_Note:_* If it’s a reorder, some of the following variables for the address options in the delivery address are not shown in the email to your customers. This is because the addresses that are saved for a supplier are not taken into account because you can save suppliers without an address in your system. 
+
 [[table-variables-order-contact-delivery-address]]
 .Variables in the *Contact / Delivery address* sub-category
 [cols="1,3"]
@@ -1708,6 +1711,9 @@ In the contact data record, the timestamp in the format `00:00:00` is also saved
 
 [#variables-contact-invoice-address]
 ==== Variables: Contact / Invoice address
+
+[TIP]
+*_Note:_* If it’s a reorder, some of the following variables for the address options in the invoice address are not shown in the email to your customers. This is because the addresses that are saved for a supplier are not taken into account because you can save suppliers without an address in your system. 
 
 [[table-variables-order-contact-invoice-address]]
 .Variables in the *Contact / Invoice address* sub-category
